--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navigation></app-navigation>
+<app-navigation></app-navigation> <!-- Navigation Component -->
 <div class="content">
-  <router-outlet></router-outlet>
+  <router-outlet></router-outlet> <!-- Renders routed components -->
 </div>
