--- a/Client/src/app/components/NavigationUI/search-icon/search-icon.component.html
+++ b/Client/src/app/components/NavigationUI/search-icon/search-icon.component.html
@@ -1,1 +1,26 @@
-<p>search-icon works!</p>
+<div class="searchIconContainer">
+    <button
+      class="searchIconButton"
+      (click)="onClick()"
+      aria-label="Open Search"
+      type="button"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 512 512"
+        class="searchIconSvg"
+      >
+        <path
+          d="M505 442.7L405.3 343c28.4-34.9 45.7-79.4 
+          45.7-127C451 96.5 354.5 0 232.5 0S14 96.5 14 
+          216.1c0 119.6 96.5 216.1 216.1 216.1 48.1 0 
+          92.6-17.3 127.5-45.7l99.7 99.7c4.5 4.5 10.6 
+          6.8 16.6 6.8s12.1-2.3 16.6-6.8c9.2-9.2 
+          9.2-24.1 0-33.4zM232.5 368.2c-84 0-152.1-68.1-152.1-152.1S148.5 
+          64 232.5 64s152.1 68.1 152.1 152.1-68.1 
+          152.1-152.1 152.1z"
+        />
+      </svg>
+    </button>
+  </div>
+  
