finished setting up first page

--- a/Client/src/app/components/Frontend/AngularPages/Basics/GettingStarted/introduction/introduction.component.html
+++ b/Client/src/app/components/Frontend/AngularPages/Basics/GettingStarted/introduction/introduction.component.html
@@ -1,1 +1,6 @@
-<p>introduction works!</p>
+<app-header [text]="'Angular Introduction'" [size]="'md'"></app-header>
+
+<app-notes-render
+  [filePath]="markdownFilePath"
+  [markdownContent]="'markdownContent'">
+</app-notes-render>
